snapshots/syntax/library/statements/load/load_at_module_level.snap
---
source: src/syntax/library/statements/load.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: LoadStatement
      children:
        - kind: LoadKeyword
          text: Load
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: frmMain
        - kind: Newline
          text: "\n"
